// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component – SnackVoter Basic count example 1`] = `
<ul>
  <li>
    Guacamole
      (popularity: 
    100%
    ) 
    <a
      onClick={[Function]}
    >
      Vote
    </a>
  </li>
  <li>
    Cheese platter
      (popularity: 
    33%
    ) 
    <a
      onClick={[Function]}
    >
      Vote
    </a>
  </li>
</ul>
`;

exports[`Storyshots Component – SnackVoter Basic percentage example 1`] = `
<ul>
  <li>
    Guacamole
      (popularity: 
    100%
    ) 
    <a
      onClick={[Function]}
    >
      Vote
    </a>
  </li>
  <li>
    Cheese platter
      (popularity: 
    33%
    ) 
    <a
      onClick={[Function]}
    >
      Vote
    </a>
  </li>
</ul>
`;

exports[`Storyshots Component – SnackVoter Basic vote count example 1`] = `
<ul>
  <li>
    Guacamole
      (popularity: 
    3 votes
    ) 
    <a
      onClick={[Function]}
    >
      Vote
    </a>
  </li>
  <li>
    Cheese platter
      (popularity: 
    1 votes
    ) 
    <a
      onClick={[Function]}
    >
      Vote
    </a>
  </li>
</ul>
`;

exports[`Storyshots Component – SnackVoter No snacks 1`] = `
<ul>
  <li>
    There are no snacks in the system
  </li>
</ul>
`;

exports[`Storyshots Component – SnackVoter No votes 1`] = `
<ul>
  <li>
    Guacamole
      (popularity: 
    100%
    ) 
    <a
      onClick={[Function]}
    >
      Vote
    </a>
  </li>
  <li>
    Cheese platter
      (popularity: 
    100%
    ) 
    <a
      onClick={[Function]}
    >
      Vote
    </a>
  </li>
</ul>
`;

exports[`Storyshots Page – Add Snack Simple example 1`] = `
<div
  className="add-snack-page"
>
  <h2>
    Add Snack
  </h2>
  <fieldset
    className="add-snack-page-fields"
  >
    <label
      htmlFor="name"
    >
      Name
    </label>
    <input
      name="name"
      onChange={[Function]}
      type="text"
      value="some snack name"
    />
  </fieldset>
  <button
    onClick={[Function]}
  >
    Save
  </button>
</div>
`;

exports[`Storyshots Page – ChoreSchedule Chores with no people 1`] = `
<div
  className="chore-list"
>
  <table
    className="all"
  >
    <thead>
      <tr>
        <th
          className="empty"
        />
        <th>
          sweep
        </th>
        <th>
          dust
        </th>
        <th>
          clean bathroom
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`Storyshots Page – ChoreSchedule No rows 1`] = `
<div
  className="chore-list"
>
  No chores or people to show.
</div>
`;

exports[`Storyshots Page – ChoreSchedule People with many chores 1`] = `
<div
  className="chore-list"
>
  <table
    className="all"
  >
    <thead>
      <tr>
        <th
          className="empty"
        />
        <th>
          sweep
        </th>
        <th>
          dust
        </th>
        <th>
          clean bathroom
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          Lydia Cupery
        </th>
        <td>
          <p />
        </td>
        <td>
          <p />
        </td>
        <td>
          <p />
        </td>
      </tr>
      <tr>
        <th>
          Hannah Cupery
        </th>
        <td>
          <p />
        </td>
        <td>
          <p />
        </td>
        <td>
          <p />
        </td>
      </tr>
      <tr>
        <th>
          Maria Cupery
        </th>
        <td>
          <p />
        </td>
        <td>
          <p />
        </td>
        <td>
          <p />
        </td>
      </tr>
      <tr>
        <th>
          Daniel Cupery
        </th>
        <td>
          <p />
        </td>
        <td>
          <p />
        </td>
        <td>
          <p />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Page – ChoreSchedule People with no chores 1`] = `
<div
  className="chore-list"
>
  <table
    className="all"
  >
    <thead>
      <tr>
        <th
          className="empty"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          Lydia Cupery
        </th>
      </tr>
      <tr>
        <th>
          Hannah Cupery
        </th>
      </tr>
      <tr>
        <th>
          Maria Cupery
        </th>
      </tr>
      <tr>
        <th>
          Daniel Cupery
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Page – ChoreSchedule People with one chore 1`] = `
<div
  className="chore-list"
>
  <table
    className="all"
  >
    <thead>
      <tr>
        <th
          className="empty"
        />
        <th>
          sweep
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          Lydia Cupery
        </th>
        <td>
          <p />
        </td>
      </tr>
      <tr>
        <th>
          Hannah Cupery
        </th>
        <td>
          <p />
        </td>
      </tr>
      <tr>
        <th>
          Maria Cupery
        </th>
        <td>
          <p />
        </td>
      </tr>
      <tr>
        <th>
          Daniel Cupery
        </th>
        <td>
          <p />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Page – Home Count 1`] = `
<div
  className="home-page"
>
  <h2>
    Snacks
  </h2>
  <ul>
    <li>
      Guacamole
        (popularity: 
      3 votes
      ) 
      <a
        onClick={[Function]}
      >
        Vote
      </a>
    </li>
    <li>
      Cheese platter
        (popularity: 
      1 votes
      ) 
      <a
        onClick={[Function]}
      >
        Vote
      </a>
    </li>
  </ul>
  <div
    className="home-page-pop-mode-toggle"
  >
    <h4>
      Show popularity as:
    </h4>
    <div>
      <label
        htmlFor="home-page-percentage"
      >
        <input
          checked={false}
          id="home-page-percentage"
          onChange={[Function]}
          type="radio"
        />
         
        Percentage
      </label>
    </div>
    <div>
      <label
        htmlFor="home-page-vote-count"
      >
        <input
          checked={true}
          id="home-page-vote-count"
          onChange={[Function]}
          type="radio"
        />
         
        Vote Count
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Page – Home Percentage 1`] = `
<div
  className="home-page"
>
  <h2>
    Snacks
  </h2>
  <ul>
    <li>
      Guacamole
        (popularity: 
      100%
      ) 
      <a
        onClick={[Function]}
      >
        Vote
      </a>
    </li>
    <li>
      Cheese platter
        (popularity: 
      33%
      ) 
      <a
        onClick={[Function]}
      >
        Vote
      </a>
    </li>
  </ul>
  <div
    className="home-page-pop-mode-toggle"
  >
    <h4>
      Show popularity as:
    </h4>
    <div>
      <label
        htmlFor="home-page-percentage"
      >
        <input
          checked={true}
          id="home-page-percentage"
          onChange={[Function]}
          type="radio"
        />
         
        Percentage
      </label>
    </div>
    <div>
      <label
        htmlFor="home-page-vote-count"
      >
        <input
          checked={false}
          id="home-page-vote-count"
          onChange={[Function]}
          type="radio"
        />
         
        Vote Count
      </label>
    </div>
  </div>
</div>
`;
